# AI-ML

./: .gitignore  README.md  pyproject.toml
chats/: chat_google_gemini.py  chat_hugging_face.py  chat_model_hugging_face_local.py
embeddings_models.py/: hugging_face_local.py
prompts/: prompts_langchain.py
