[project]
name = "langchain-pr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-huggingface>=1.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
